Add edit functionality

--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -15,7 +15,11 @@
                                         <select id="course_category" name="course_category" class="validate" required>
                                             <option value="" disabled selected>Choose Category</option>
                                             {% for category in categories %}
-                                                <option value="{{ category.course_category }}">{{ category.course_category }}</option>
+                                                {% if category.course_category == recipe.course_category %}
+                                                    <option value="{{ category.course_category }}" selected>{{ category.course_category }}</option>
+                                                {% else %}
+                                                    <option value="{{ category.course_category }}" >{{ category.course_category }}</option>
+                                                {% endif %}
                                             {% endfor %}
                                         </select>
                                         <label for="course_category">Recipe Category</label>
@@ -27,14 +31,14 @@
                                     <div class="input-field col s6">
                                         <i class="fas fa-file-signature prefix"></i>
                                         <label for="recipe_name">Recipe Name</label>
-                                        <input id="recipe_name" name="recipe_name" type="text" class="validate"/>
+                                        <input value="{{ recipe.recipe_name }}" id="recipe_name" name="recipe_name" type="text" class="validate"/>
                                     </div>
 
                                     <!-- prep time -->
                                     <div class="input-field col s3">
                                         <i class="fas fa-stopwatch prefix"></i>
                                         <label for="prep_time">Prep Time</label>
-                                        <input placeholder="e.g. 40" id="prep_time" name="prep_time" type="number" class="validate"/>
+                                        <input value="{{ recipe.prep_time }}" placeholder="e.g. 40" id="prep_time" name="prep_time" type="number" class="validate"/>
                                     </div>
                                     <div class="input-field col s3">
                                         <p class="valign-wrapper">Minutes</p>
@@ -46,7 +50,7 @@
                                     <div class="input-field col s3">
                                         <i class="fas fa-stopwatch prefix"></i>
                                         <label for="cooking_time">Cooking Time</label>
-                                        <input placeholder="e.g. 120" id="cooking_time" name="cooking_time" type="number" class="validate"/>
+                                        <input value="{{ recipe.cooking_time }}" placeholder="e.g. 120" id="cooking_time" name="cooking_time" type="number" class="validate"/>
                                     </div>
                                     <div class="input-field col s3">
                                         <p class="valign-wrapper">Minutes</p>
@@ -56,7 +60,7 @@
                                     <div class="input-field col s3">
                                         <i class="fas fa-users prefix"></i>
                                         <label for="serves">Serves</label>
-                                        <input placeholder="e.g. 3" name="serves" id="serves" type="number" class="validate"/>
+                                        <input value="{{ recipe.serves }}" placeholder="e.g. 3" name="serves" id="serves" type="number" class="validate"/>
                                     </div>
                                     <div class="input-field col s3">
                                         <p class="valign-wrapper">People</p>
@@ -68,16 +72,21 @@
                                     <div class="input-field col s12">
                                         <i class="fas fa-pencil-alt prefix"></i>
                                         <label for="s_desc">Short Description</label>
-                                        <textarea name="s_desc" id="s_desc" cols="30" rows="5" class="materialize-textarea validate"></textarea>
+                                        <textarea name="s_desc" id="s_desc" cols="30" rows="5" class="materialize-textarea validate">
+                                            {{- recipe.s_desc -}}
+                                        </textarea>
                                     </div>
                                 </li>
 
                                 <!-- ingredients -->
                                 <li class="row">
                                     <div class="input-field col s12">
+                                        <p>When adding ingredients, please separate each ingredient with a new line.</p>
                                         <i class="fas fa-list prefix"></i>
                                         <label for="ingredients">Ingredients</label>
-                                        <textarea name="ingredients" id="ingredients" cols="30" rows="10" class="materialize-textarea validate"></textarea>
+                                        <textarea name="ingredients" id="ingredients" cols="30" rows="10" class="materialize-textarea validate">
+                                            {{- recipe.ingredients -}}
+                                        </textarea>
                                     </div>
                                 </li>
 
@@ -86,7 +95,9 @@
                                     <div class="input-field col s12">
                                         <i class="fas fa-directions prefix"></i>
                                         <label for="directions">Directions</label>
-                                        <textarea name="directions" id="directions" rows="10" class="materialize-textarea validate"></textarea>
+                                        <textarea name="directions" id="directions" rows="10" class="materialize-textarea validate">
+                                            {{- recipe.directions -}}
+                                        </textarea>
                                     </div>
                                 </li>
 
@@ -95,7 +106,9 @@
                                     <div class="input-field col s12">
                                         <i class="fas fa-hands-helping prefix"></i>
                                         <label for="cook_tip">Cooking Tips</label>
-                                        <textarea name="cook_tip" id="cook_tip" rows="5" class="materialize-textarea validate"></textarea>
+                                        <textarea name="cook_tip" id="cook_tip" rows="5" class="materialize-textarea validate">
+                                            {{- recipe.cook_tip -}}
+                                        </textarea>
                                     </div>
                                 </li>
 
