--- a/templates/desserts.html
+++ b/templates/desserts.html
@@ -10,7 +10,15 @@
               <li>
                 <div class="collapsible-header">
                     <i class="material-icons"></i>
-                    <strong>{{ recipe.recipe_name }}</strong>
+                    <div class="col s3">
+                        <i class="fas fa-caret-down"></i>
+                        <!-- <a href="" class="btn-small green accent-4">Done</a> -->
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                    </div>
+                    <div class="col s9">
+                        <i class="material-icons"></i>
+                        <strong>{{ recipe.recipe_name }}</strong>
+                    </div>
                 </div>
                 <div class="collapsible-body">
                     <p><strong>Preparation Time</strong> : {{ recipe.prep_time }} minutes</p>
