--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -146,6 +146,11 @@
                             <!-- submit button -->
                             <div class="row">
                                 <div class="col s12 center-align">
+                                    <!-- cancel button -->
+                                    <a href="{{ url_for('profile', username=username) }}" class="btn-large red">
+                                        Cancel<i class="fas fa-times-circle right"></i>
+                                    </a>
+                                    <!-- submit button -->
                                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
                                         Edit Recipe <i class="fas fa-edit right"></i>
                                     </button>
