--- a/templates/maincourses.html
+++ b/templates/maincourses.html
@@ -11,8 +11,10 @@
                     <i class="material-icons"></i>
                     <div class="col s3">
                         <i class="fas fa-caret-down"></i>
-                        <!-- <a href="" class="btn-small green accent-4">Done</a> -->
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                        {% if session.user|lower == "ddmin" %}
+                            <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small green accent-4">Delete</a>
+                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                        {% endif %}
                     </div>
                     <div class="col s9">
                         <i class="material-icons"></i>
