--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
                 <div class="collapsible-header">
                     <div class="col s3">
                         <i class="fas fa-caret-down"></i>
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small green accent-4">Done</a>
+                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small green accent-4">Delete</a>
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                     </div>
                     <div class="col s9">
