--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,9 @@
                 <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+                    {% if session.user|lower == "admin"|lower %}
+                        <li><a href="{{ url_for('categories') }}">Manage Categories</a></li>
+                    {% endif %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -49,6 +52,9 @@
             <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+                {% if session.user|lower == "admin"|lower %}
+                    <li><a href="{{ url_for('categories') }}">Manage Categories</a></li>
+                {% endif %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
