--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,9 @@
                 <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-
+                    {% if session.user|lower == "admin"|lower %}
+                        <li><a href="/templates/category.html">Categories</a></li>
+                    {% endif %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -44,13 +46,14 @@
           </nav>
 
       <!-- mobile sidenav -->
-
           <ul id="mobile-demo" class="sidenav">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-
+                {% if session.user|lower == "admin"|lower %}
+                    <li><a href="/templates/category.html">Manage Categories</a></li>
+                {% endif %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
