--- a/templates/recipecategory.html
+++ b/templates/recipecategory.html
@@ -4,14 +4,22 @@
     <h3 class="light-blue-text text-darken-4 center-align">Manage Categories</h3>
 
     <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_category') }}" class="btn-large">
+                Add Category <i class="fas fa-plus-square ri"></i>
+            </a>
+        </div>
+    </div>
+
+    <div class="row">
         {% for category in categories %}
             <div class="col s12 m4">
-                <div class="card light-blue darken-4 text-shadow center-align">
+                <div class="card light-blue darken-4 center-align">
                     <div class="card-content white-text">
                         <span class="card-title">{{ category.course_category }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn green accent-4">Edit</a>
+                        <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn green accent-4">Edit</a>
                         <a href="#" class="btn light-blue lighten-1">Delete</a>
                     </div>
                 </div>
