--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,7 +17,7 @@
                 <div class="collapsible-header">
                     <div class="col s3">
                         <i class="fas fa-caret-down"></i>
-                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small green accent-4">Delete</a>
+                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id, username=username) }}" class="btn-small green accent-4" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete</a>
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                     </div>
                     <div class="col s9">
@@ -27,20 +27,26 @@
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
-                      <div class="col s8">
-                        <p><strong>Preparation Time</strong> : {{ recipe.prep_time }} minutes</p>
-                        <p><strong>Cooking Time</strong> : {{ recipe.cooking_time }} minutes</p>
-                        <p><strong>Serves</strong> : {{ recipe.serves }} people</p>
-                        <p><strong>Short Description</strong> : {{ recipe.s_desc }}</p>
-                        <ol type="1">
-                          <li>
-                              <p><strong>Ingredients</strong> : {{ recipe.ingredients }}</p>
-                          </li>
-                        </ol>
-                        <p><strong>Directions</strong> : {{ recipe.directions }}</p>
-                        <p><strong>Cooking Tips</strong> : {{ recipe.cook_tip }}</p>
-                        <p><strong>Created by</strong> : {{ recipe.created_by }}</p>
-                      </div>
+                        <div class="col s8">
+                            <p><strong>Preparation Time</strong> : {{ recipe.prep_time }} minutes</p>
+                            <p><strong>Cooking Time</strong> : {{ recipe.cooking_time }} minutes</p>
+                            <p><strong>Serves</strong> : {{ recipe.serves }} people</p>
+                            <p><strong>Short Description</strong> : {{ recipe.s_desc }}</p>
+                            <p><strong>Ingredients</strong>:</p>  
+                            <ol>
+                              {% for ingredient in recipe.ingredients %}
+                                <li>{{ ingredient }}</li>
+                              {% endfor %}
+                            </ol>
+                            <p><strong>Directions</strong>:</p>
+                            <ol>
+                              {% for direction in recipe.directions %}
+                                <li>{{ direction }}</li>
+                              {% endfor %}
+                            </ol>
+                            <p><strong>Cooking Tips</strong> : {{ recipe.cook_tip }}</p>
+                            <p><strong>Created by</strong> : {{ recipe.created_by }}</p>
+                          </div>
                       <div class="col s4">
                         <img src="{{ recipe.image_upload }}" alt="">
                       </div>
