--- a/templates/register.html
+++ b/templates/register.html
@@ -42,7 +42,7 @@
                         </div>
                         <!-- submit -->
                         <div class="row">
-                            <button type="submit" class="col s12 btn-large light-blue darken-4">
+                            <button type="submit" class="col s12 btn-large ">
                                 Register <i class="fas fa-sign-in-alt"></i>
                             </button>
                         </div>
