--- a/templates/desserts.html
+++ b/templates/desserts.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-      <h1 class="center-align">Desserts</h1>
+      <h3 class="center-align">Desserts</h3>
                   
       <ul class="collapsible">
         {% for recipe in recipes %}
@@ -44,8 +44,8 @@
                       <p><strong>Cooking Tips</strong> : {{ recipe.cook_tip }}</p>
                       <p><strong>Created by</strong> : {{ recipe.created_by }}</p>
                     </div>
-                    <div class="col s4">
-                      <img src="{{ recipe.image_upload }}" alt="">
+                    <div class="col s4 recImg">
+                      <img src="{{ recipe.image_upload }}" alt="Recipe Uploaded Image">
                     </div>
                   </div>
                 </div>
