--- a/templates/editcategory.html
+++ b/templates/editcategory.html
@@ -17,10 +17,10 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <a href="{{ url_for('manage_categories') }}" class="btn-large red">
+                    <a href="{{ url_for('manage_categories') }}" class="btn-large">
                         Cancel <i class="fas fa-times-circle right"></i>
                     </a>
-                    <button type="submit" class="btn-large light-blue darken-1">
+                    <button type="submit" class="btn-large ">
                         Edit Category <i class="fas fa-edit right"></i>
                     </button>
                 </div>
