--- a/templates/maincourses.html
+++ b/templates/maincourses.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-      <h1 class="center-align">Main Courses</h1>
+      <h3 class="center-align">Main Courses</h3>
                   
       <ul class="collapsible">
         {% for recipe in recipes %}
@@ -12,8 +12,8 @@
                     <div class="col s3">
                         <i class="fas fa-caret-down"></i>
                         {% if session.user|lower == "admin"|lower %}
-                            <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small green accent-4">Delete</a>
-                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                            <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small ">Delete</a>
+                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small ">Edit</a>
                         {% endif %}
                     </div>
                     <div class="col s9">
@@ -43,8 +43,8 @@
                       <p><strong>Cooking Tips</strong> : {{ recipe.cook_tip }}</p>
                       <p><strong>Created by</strong> : {{ recipe.created_by }}</p>
                     </div>
-                    <div class="col s4">
-                      <img src="{{ recipe.image_upload }}" alt="">
+                    <div class="col s4 recImg">
+                      <img src="{{ recipe.image_upload }}" alt="Recipe Uploaded Image">
                     </div>
                   </div>
                 </div>
