--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,9 +4,7 @@
 
         <div class="row">
             <div class="col s12 m8 offset-m2">
-                <div class="card">
-                    <h3 class="center-align">{{ username }}'s Profile</h3>
-                </div>
+                    <h3 class="center-align profile-heading">{{ username }}'s Profile</h3>
             </div>
         </div>
 
@@ -17,8 +15,9 @@
                 <div class="collapsible-header">
                     <div class="col s3">
                         <i class="fas fa-caret-down"></i>
-                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id, username=username) }}" class="btn-small green accent-4" onclick="return confirm('Are you sure you want to delete this recipe?');">Delete</a>
-                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id, username=username) }}" class="btn-small" 
+                            onclick="return confirm('Are you sure you want to delete this recipe?');">Delete</a>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-small">Edit</a>
                     </div>
                     <div class="col s9">
                         <i class="material-icons"></i>
@@ -47,9 +46,9 @@
                             <p><strong>Cooking Tips</strong> : {{ recipe.cook_tip }}</p>
                             <p><strong>Created by</strong> : {{ recipe.created_by }}</p>
                           </div>
-                      <div class="col s4">
-                        <img src="{{ recipe.image_upload }}" alt="">
-                      </div>
+                          <div class="col s4 recImg">
+                            <img src="{{ recipe.image_upload }}" alt="Recipe Uploaded Image">
+                          </div>
                     </div>
                   </div>
               </li>
