--- a/templates/recipecategory.html
+++ b/templates/recipecategory.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">Manage Categories</h3>
+    <h3 class="center-align">Manage Categories</h3>
 
     <div class="row">
         <div class="col s12 center-align">
@@ -14,13 +14,14 @@
     <div class="row">
         {% for category in categories %}
             <div class="col s12 m4">
-                <div class="card light-blue darken-4 center-align">
-                    <div class="card-content white-text">
+                <div class="card center-align">
+                    <div class="card-content ">
                         <span class="card-title">{{ category.course_category }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn green accent-4">Edit</a>
-                        <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn green accent-4" onclick="return confirm('Are you sure you want to delete this category?');">
+                        <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small">Edit</a>
+                        <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small " 
+                                onclick="return confirm('Are you sure you want to delete this category?');">
                             Delete
                         </a>
                     </div>
