--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 
 /* font styling */
 
-h1, h2, h3 {
+h1, h2, h3, h4 {
   font-family: 'Dosis', 'Courier New', Courier, monospace;
   color: #21161a;
   margin: 30px;
@@ -26,6 +26,10 @@ strong {
 }
 
 .profile-heading {
+  text-transform: capitalize;
+}
+
+span {
   text-transform: capitalize;
 }
 
@@ -73,6 +77,7 @@ nav {
 .flashes {
   line-height: 2px;
   display: block !important;
+  text-transform: uppercase;
 }
 
 /* image upload */
@@ -102,6 +107,17 @@ nav {
     text-transform: capitalize;
     margin-bottom: 5px;
   }
+
+/* category boxes */
+
+.card-content, .card-action {
+  background: #563530 !important;
+  color: #e2ceb6;
+  border-radius: 5px;
+  border: 2px solid #f2f4f3;
+}
+
+ /* recipe menu buttons  */
 
 .starter-btn {
   background: url(/static/images/starter.jpg) no-repeat center;
